[style] Fix mobile header styles on smaller screens

--- a/client/src/styles/core/_mobileLayout.scss
+++ b/client/src/styles/core/_mobileLayout.scss
@@ -1,6 +1,7 @@
+@use "include-media" as im;
 @use "../variables" as v;
 @use "../mixins" as m;
-@use "../helpers/index" as h;
+@use "../helpers" as h;
 
 #er__mobileLayout {
 
@@ -33,9 +34,20 @@
 
         #er__appHeader__background {
             position: absolute;
+            z-index: 2000;
             top: 0;
             left: 0;
             margin-top: v.$mobileHeader-topMargin;
+            height: 86px;
+            width: 100%;
+            // background-image: m.cloudflareUrl("ui/header/400/public");
+            background-repeat: no-repeat;
+            background-position: left center;
+            // background-size: $size;
+            @include im.media("<350px")            { background-image: m.cloudflareUrl("ui/header/300/public"); }
+            @include im.media(">=350px", "<400px") { background-image: m.cloudflareUrl("ui/header/350/public"); }
+            @include im.media(">=400px", "<811px") { background-image: m.cloudflareUrl("ui/header/400/public"); }
+            @include im.media(">=811px")           { background-image: m.cloudflareUrl("ui/header/811/public"); }
         }
 
         #er__appHeader__content {
